♻️ refactor: mudando title para o componente Form

--- a/frontend/src/components/Form/Form.css
+++ b/frontend/src/components/Form/Form.css
@@ -9,6 +9,11 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.title {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
 .input {
   width: 100%;
   padding: 10px;
